syntax = "proto3";
package  message ;

option go_package = "./messagegrpc";

import "google/protobuf/timestamp.proto";

service MessageService { 
    rpc SendMessage (SendMessageResquest) returns (SendMessageResponse) { }
    rpc GetMessageList (GetMessageListRequest) returns (GetMessageListResponse) { }

}

message Message { 
    int32 id = 1;
    string message = 2;
    google.protobuf.Timestamp createdAt = 3;
}

message SendMessageResquest {
    string message = 1;
}

message SendMessageResponse {
    string message = 1;
}

message GetMessageListRequest { 
}

message GetMessageListResponse { 
    repeated Message messages = 1;
}